public/core/v0.6/_sources/reference/tmlt/core/measurements/noise_mechanisms/index.rst.txt



***********************
noise_mechanisms
***********************

.. py:module:: tmlt.core.measurements.noise_mechanisms

.. autoapi-nested-parse::

   Measurements for adding noise to individual numbers.











Classes
=======

.. list-table::

   * - :class:`.AddLaplaceNoise`
     - Add Laplace noise to a number.
   * - :class:`.AddGeometricNoise`
     - Add Geometric noise to a number.
   * - :class:`.AddDiscreteGaussianNoise`
     - Add discrete Gaussian noise to a number.

   
.. py:class:: AddLaplaceNoise(input_domain, scale)

   Bases: :class:`tmlt.core.measurements.base.Measurement`

   Add Laplace noise to a number.






   .. automethod:: __init__
   .. py:method:: input_domain(self)
      :property:

      Return input domain for the measurement.


   .. py:method:: scale(self)
      :property:

      Returns the noise scale.


   .. py:method:: output_type(self)
      :property:

      Return the output data type after being used as a UDF.


   .. py:method:: privacy_function(self, d_in)

      Returns the smallest d_out satisfied by the measurement.

      The returned d_out is :math:`\frac{d_{in}}{b}`
      (:math:`\infty` if :math:`b = 0`).

      where:

      * :math:`d_{in}` is the input argument "d_in"
      * :math:`b` is the property "scale"

      :param d_in: Distance between inputs under input_metric.


   .. py:method:: __call__(self, val)

      Returns the value with laplace noise added.

      The added laplace noise has the probability density function

      :math:`f(x) = \frac{1}{2 b} e ^ {\frac{-\mid x \mid}{b}}`

      where:

      * :math:`x` is a real number
      * :math:`b` is the property "scale"

      :param val: Value to add Laplace noise to.


   .. py:method:: inverse_cdf(cls, scale, probability)
      :classmethod:

      Inverse CDF function.

      Given a probability, returns a point x in the range such that
      the noise generated by this measurement will be <= x with
      probability probability.

      :param scale: The noise scale.
      :param probability: The probability that noise generated by this class
                          should fall below the threshold it returns. Must be in [0, 1].


   .. py:method:: input_metric(self)
      :property:

      Distance metric on input domain.


   .. py:method:: output_measure(self)
      :property:

      Distance measure on output.


   .. py:method:: is_interactive(self)
      :property:

      Returns true iff the measurement is interactive.


   .. py:method:: privacy_relation(self, d_in, d_out)

      Return True if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under `input_metric`.
      :param d_out: Distance between outputs under `output_measure`.



   
.. py:class:: AddGeometricNoise(alpha)

   Bases: :class:`tmlt.core.measurements.base.Measurement`

   Add Geometric noise to a number.






   .. automethod:: __init__
   .. py:method:: input_domain(self)
      :property:

      Return input domain for the measurement.


   .. py:method:: output_type(self)
      :property:

      Return the output data type after being used as a UDF.


   .. py:method:: alpha(self)
      :property:

      Returns the noise scale.


   .. py:method:: privacy_function(self, d_in)

      Returns the smallest d_out satisfied by the measurement.

      The returned d_out is :math:`\frac{d_{in}}{\alpha}`
      (:math:`\infty` if :math:`\alpha = 0`).

      where:

      * :math:`d_{in}` is the input argument "d_in"
      * :math:`\alpha` is :attr:`~.alpha`

      :param d_in: Distance between inputs under input_metric.


   .. py:method:: __call__(self, value)

      Returns the value with double sided geometric noise added.

      The added noise has the probability mass function

      .. math::

          f(k)=
          \frac
              {e^{1 / \alpha} - 1}
              {e^{1 / \alpha} + 1}
          \cdot
          e^{\frac{-\mid k \mid}{\alpha}}

      where:

      * :math:`k` is an integer
      * :math:`\alpha` is :attr:`~.alpha`

      A double sided geometric distribution is the difference between two geometric
      distributions (It can be sampled from by sampling a two values from a geometric
      distribution, and taking their difference).

      See section 4.1 in :cite:`BalcerV18`, remark 2 in
      `this paper <https://arxiv.org/pdf/1707.01189.pdf>`_, or scipy.stats.geom for
      more information. (Note that the parameter :math:`p` used in scipy.stats.geom
      is related to :math:`\alpha` through :math:`p = 1 - e^{-1 / \alpha}`).

      :param value: Value to add geometric noise to.


   .. py:method:: inverse_cdf(cls, alpha, probability)
      :classmethod:

      Inverse CDF function.

      Given a probability, returns a point x in the range such that
      the noise generated by this measurement will be <= x with
      probability probability.

      :param alpha: The noise scale.
      :param probability: The probability that noise generated by this class
                          should fall below the threshold it returns. Must be in [0, 1].


   .. py:method:: input_metric(self)
      :property:

      Distance metric on input domain.


   .. py:method:: output_measure(self)
      :property:

      Distance measure on output.


   .. py:method:: is_interactive(self)
      :property:

      Returns true iff the measurement is interactive.


   .. py:method:: privacy_relation(self, d_in, d_out)

      Return True if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under `input_metric`.
      :param d_out: Distance between outputs under `output_measure`.



   
.. py:class:: AddDiscreteGaussianNoise(sigma_squared)

   Bases: :class:`tmlt.core.measurements.base.Measurement`

   Add discrete Gaussian noise to a number.






   .. automethod:: __init__
   .. py:method:: input_domain(self)
      :property:

      Return input domain for the measurement.


   .. py:method:: output_type(self)
      :property:

      Return the output data type after being used as a UDF.


   .. py:method:: sigma_squared(self)
      :property:

      Returns the noise scale.


   .. py:method:: privacy_function(self, d_in)

      Returns the smallest d_out satisfied by the measurement.

      The returned d_out is :math:`\frac{d_{in}^2}{2 \cdot \sigma^2}`
      (:math:`\infty` if :math:`\sigma^2 = 0`).

      where:

      * :math:`d_{in}` is the input argument "d_in"
      * :math:`\sigma^2` is :attr:`~.sigma_squared`

      See Proposition 1.6 in `this <https://arxiv.org/pdf/1605.02065.pdf>`_ paper.

      :param d_in: Distance between inputs under input_metric.


   .. py:method:: __call__(self, value)

      Adds discrete Gaussian noise with specified scale.

      The added noise has the probability mass function

      .. math::

          f(k) = \frac
          {e^{k^2/2\sigma^2}}
          {
              \sum_{n\in \mathbb{Z}}
              e^{n^2/2\sigma^2}
          }

      where:

      * :math:`k` is an integer
      * :math:`\sigma^2` is :attr:`~.sigma_squared`

      See :cite:`Canonne0S20` for more information. The formula above is based on
      Definition 1.


   .. py:method:: inverse_cdf(cls, sigma_squared, probability)
      :classmethod:

      Inverse CDF function.

      Given a probability, returns a point x in the range such that
      the noise generated by this measurement will be <= x with
      probability probability.

      :param sigma_squared: The noise scale.
      :param probability: The probability that noise generated by this class
                          should fall below the threshold it returns. Must be in [0, 1].


   .. py:method:: input_metric(self)
      :property:

      Distance metric on input domain.


   .. py:method:: output_measure(self)
      :property:

      Distance measure on output.


   .. py:method:: is_interactive(self)
      :property:

      Returns true iff the measurement is interactive.


   .. py:method:: privacy_relation(self, d_in, d_out)

      Return True if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under `input_metric`.
      :param d_out: Distance between outputs under `output_measure`.






